factorisation des duels de l'enfer /2